5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1674_1102.log
== TEST (2019-05-02 09:26:42) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H= float(input(""))
nc = float(input(""))
rb = float(input"")
print("Entradas: ", H,",", nc,",", rb)
if(H>0 and nc>0 and rb>0 H>nc H>2*rb):
	if(nc<=rb):
		v=(pi/3) * (nc**2) * (3*rb - nc)
		print("Volume: ", round(v*1000,3), "litros")
	elif(rb<nc and nc<= H-rb):
		v = (4*pi*(rb**3)/6) + (pi*(rb**2)*(nc-rb))
		print("Volume: ", round(v*1000,3), "litros")
	elif(nc>H-rb):
		v= ((4*pi*(rb**3)/6 + (pi/3)* (rb**2)* (nc - rb))*2)
		print("Volume: ", round(v*1000,3), "litros")
else:
	print("Entradas invalidas")
		
		
-- ERROR:
File "XXXX", line 9
    rb = float(input"")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:26:58) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H= float(input(""))
nc = float(input(""))
rb = float(input(""))
print("Entradas: ", H,",", nc,",", rb)
if(H>0 and nc>0 and rb>0 H>nc H>2*rb):
	if(nc<=rb):
		v=(pi/3) * (nc**2) * (3*rb - nc)
		print("Volume: ", round(v*1000,3), "litros")
	elif(rb<nc and nc<= H-rb):
		v = (4*pi*(rb**3)/6) + (pi*(rb**2)*(nc-rb))
		print("Volume: ", round(v*1000,3), "litros")
	elif(nc>H-rb):
		v= ((4*pi*(rb**3)/6 + (pi/3)* (rb**2)* (nc - rb))*2)
		print("Volume: ", round(v*1000,3), "litros")
else:
	print("Entradas invalidas")
		
		
-- ERROR:
File "XXXX", line 11
    if(H>0 and nc>0 and rb>0 H>nc H>2*rb):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:44) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H= float(input(""))
nc = float(input(""))
rb = float(input(""))
print("Entradas: ", H,",", nc,",", rb)
if(H>0 and nc>0 and rb>0 and H>nc and H>2*rb):
	if(nc<=rb):
		v=(pi/3) * (nc**2) * (3*rb - nc)
		print("Volume: ", round(v*1000,3), "litros")
	elif(rb<nc and nc<= H-rb):
		v = (4*pi*(rb**3)/6) + (pi*(rb**2)*(nc-rb))
		print("Volume: ", round(v*1000,3), "litros")
	elif(nc>H-rb):
		v= ((4*pi*(rb**3)/6 + (pi/3)* (rb**2)* (nc - rb))*2)
		print("Volume: ", round(v*1000,3), "litros")
else:
	print("Entradas invalidas")
		
		
-- OUTPUT:
Entradas:  11.3 , 5.7 , 2.3
Volume:  81987.191 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:27:56) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H= float(input(""))
nc = float(input(""))
rb = float(input(""))
print("Entradas: ", H,",", nc,",", rb)
if(H>0 and nc>0 and rb>0 and H>nc and H>2*rb):
	if(nc<=rb):
		v=(pi/3) * (nc**2) * (3*rb - nc)
		print("Volume: ", round(v*1000,3), "litros")
	elif(rb<nc and nc<= H-rb):
		v = (4*pi*(rb**3)/6) + (pi*(rb**2)*(nc-rb))
		print("Volume: ", round(v*1000,3), "litros")
	elif(nc>H-rb):
		v= ((4*pi*(rb**3)/6 + (pi/3)* (rb**2)* (nc - rb))*2)
		print("Volume: ", round(v*1000,3), "litros")
else:
	print("Entradas invalidas")
		
		
-- EXECUTION TIME:
0.266302
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas:  11.3 , 5.7 , 2.3
Volume:  81987.191 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas:  8.5 , 9.5 , 2.2
Entradas invalidas
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas:  8.0 , 4.0 , 6.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
